<resources>
    <string name="app_name">JEXKids</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="accept_and_continue">Accept &amp; Continue</string>
    <string name="home">Home</string>
    <string name="historys">History</string>
    <string name="active">Active</string>
    <string name="claim">Claim</string>
    <string name="pending">Pending</string>
    <string name="history">Transaction History</string>
    <string name="earn">Earn</string>
    <string name="rewards">Rewards</string>
    <string name="goal">Goal</string>
    <string name="usage">Usage</string>
    <string name="today_usage">Today\'s Usage</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="top_activity">Today\'s Top Activity</string>
    <string name="usage_per_day">Usage Per Day</string>
    <string name="today">Today</string>
    <string name="earn_dialog">Lets Go!\nAdd item to your task list?</string>
    <string name="rewards_dialog">Request a reward!\nSend in your request\napproval?</string>
    <string name="permission">Permissions</string>
    <string name="proceed">Proceed</string>
    <string name="select_language">Select Language</string>
    <string name="language_proceed">Please select a language to proceed</string>
    <string name="kids_name">Kids Name</string>
    <string name="enter_kids_name">Enter Kids Name</string>
    <string name="enter">Enter</string>
    <string name="otp_label">Input the generated code onto\nYour new device and hit submit</string>
    <string name="submit">Submit</string>
    <string name="lock_label">app blocked by parent</string>
    <string name="lock_desc">%1$d apps blocked</string>
    <string name="daily_usage">Daily Usage</string>
    <string name="reward_goal">Reward Goal</string>
    <string name="available_tokens">Available tokens -</string>
    <string name="remaining">remaining</string>
    <string name="permit_usage_access">Usage access for JEXKids</string>
    <string name="read_phone_state">Allow and manage phone calls</string>
    <string name="manage_overlay">Display over other apps</string>
    <string name="accessibilty">Accessibility Service</string>
    <string name="title_onboarding_1">Connect to\nyour JEXtream account</string>
    <string name="description_onboarding_1">This requires a Jextream Wi-Fi\ndevice and works with your new\naccount. Don\'t have one? Get\nstarted at</string>
    <string name="description_onboarding_link1">Jextream.net</string>
    <string name="description_onboarding_link2">JEXKids Tutorial</string>
    <string name="link_address1">https://www.jextream.net/shop/</string>
    <string name="link_address2">https://www.jextream.net/products-jextream-app-v1-0-tutorial/ch-1-video-welcome-to-jextream-home-app-4/</string>
    <string name="title_onboarding_2">Pair your JEXKids device\nto your JEXtream account.</string>
    <string name="description_onboarding_2">Tap the link below to view a short\ntutorial on how to pair your JEXKids\ndevice to your JEXtream account.</string>
    <string name="title_onboarding_3">JexKids Onboarding 3</string>
    <string name="description_onboarding_3">This is for Tutorial</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="history_items">
        <item>All</item>
        <item>Approved</item>
        <item>Claimed</item>
        <item>Denied</item>
    </string-array>
    <string-array name="pending_items">
        <item>All Pending</item>
        <item>Pending Tasks</item>
        <item>Pending Rewards</item>
    </string-array>
    <string name="dialog_permission_tip"> Your Android version is greater than or equal Android 5.0, App Locker need to get the \"Application Usage\" permission.</string>
    <string name="welcome_to_the_app_lock">Welcome to the JEXKids</string>
    <string name="reset">Reset</string>
    <string name="create_pattern">Create pattern</string>
    <string name="please_draw_your_pattern">Please draw your pattern</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="search_application">Search Apps</string>
    <string name="settings">Settings</string>
    <string name="lock_time">App lock time</string>
    <string name="locked_with">Lock app when locked the mobile</string>
    <string name="open">Open</string>
    <string name="change_pass">Change lock</string>
    <string name="show_pattern">Show lock pattern</string>
    <string name="hiding_pass">Hide lock pattern</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="warning">Warning</string>
    <string name="_1_minute">1 minute</string>
    <string name="apps">Apps</string>
    <string name="accessibility_service_description">This permission is only used for locking the apps</string>
    <string name="privacy">Privacy Policy</string>
    <string name="application_name">Application Name</string>
    <string name="hours_and_minutes">Hours and Minutes</string>
    <string name="no_data_found">No Data Found</string>
    <string name="privacy_link">I agree to JEXtream\'s <a href="https://www.jextream.net/privacy-policy/">Privacy Policy</a></string>
    <string name="terms_link">I agree to JEXtream\'s <a href="https://www.jextream.net/terms-of-use/">Terms and Conditions</a></string>
    <string name="parent_control">It\'s app controlled by parent</string>
    <string name="lockscreen_access_pattern_cell_added">Added cell</string>
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
    <string name="lock_pattern_entered_header">Record pattern</string>
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
    <string name="password_error_count">The pattern does not match. Please try again.</string>
    <string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
    <string-array name="app_lock_time_array">
                
        <item>After 15 seconds</item>
                
        <item>After 30 seconds</item>
                
        <item>After 1 minute</item>
                
        <item>After 3 minutes</item>
                
        <item>After 5 minutes</item>
                
        <item>After 10 minutes</item>
                
        <item>After 30 minutes</item>
                
        <item>Immediate</item>
            
    </string-array>
    <string-array name="lang_array">
        <item>English</item>
        <item>Korean (한국어)</item>
        <item>Spanish (Español)</item>
    </string-array>
    <string name="app_description">NetGuard provides simple and advanced ways to block access to the internet - no root required. Apps and addresses can individually be allowed or denied access to your Wi-Fi and/or mobile connection.</string>
    <string name="app_copyright" translatable="false">Copyright \u00A9 2015–2022 by M. Bokhorst (M66B)</string>
    <string name="app_android">NetGuard requires Android 5.1 or later</string>
    <string name="app_xposed">Xposed causes too many crashes, which might result in NetGuard being removed from the Google Play Store, therefore NetGuard isn\'t supported while Xposed is installed</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_privacy"><a href="https://www.netguard.me/privacy/">Privacy policy</a></string>
    <string name="app_first">Great care has been taken to develop and test NetGuard, however it is impossible to guarantee NetGuard will work correctly on every device.</string>
    <string name="app_agree">I agree</string>
    <string name="app_disagree">I disagree</string>
    <string name="app_support">NetGuard needs your help. Tap to purchase pro features to keep the project going.</string>
    <string name="channel_foreground">Running services</string>
    <string name="channel_notify">General notifications</string>
    <string name="channel_access">Access notifications</string>
    <string name="menu_search">Search for app</string>
    <string name="menu_filter">Filter apps</string>
    <string name="menu_app_user">Show user apps</string>
    <string name="menu_app_system">Show system apps</string>
    <string name="menu_app_nointernet">Show apps without internet</string>
    <string name="menu_app_disabled">Show disabled apps</string>
    <string name="menu_sort">Sort apps</string>
    <string name="menu_sort_name">Sort by name</string>
    <string name="menu_sort_uid">Sort by uid</string>
    <string name="menu_sort_data">Sort by data usage</string>
    <string name="menu_log">Show log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_apps">Other apps</string>
    <string name="menu_protocol_udp" translatable="false">UDP</string>
    <string name="menu_protocol_tcp" translatable="false">TCP</string>
    <string name="menu_protocol_other">Other</string>
    <string name="menu_traffic_allowed">Allowed</string>
    <string name="menu_traffic_blocked">Blocked</string>
    <string name="menu_live">Live updates</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_resolve">Show names</string>
    <string name="menu_organization">Show organization</string>
    <string name="menu_pcap_enabled">PCAP enabled</string>
    <string name="menu_pcap_export">PCAP export</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_export">Export</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cleanup">Cleanup</string>
    <string name="title_protocol">Protocol</string>
    <string name="title_dport">Source port</string>
    <string name="title_raddr">Destination address</string>
    <string name="title_rport">Destination port</string>
    <string name="title_ruid">Destination app</string>
    <string name="title_external">For an external server select \'nobody\'</string>
    <string name="setting_defaults">Defaults (white/blacklist)</string>
    <string name="setting_whitelist_wifi">Block Wi-Fi</string>
    <string name="setting_whitelist_other">Block mobile</string>
    <string name="setting_screen_wifi">Allow Wi-Fi when screen on</string>
    <string name="setting_screen_other">Allow mobile when screen on</string>
</resources>