<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".auth.login">

    <ImageView
        android:id="@+id/login_imageview"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_splash"/>
    <TextView
        android:id="@+id/login_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_below="@id/login_imageview"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:letterSpacing="0.1"
        android:text="@string/enter_kids_name"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_textview"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:hint="@string/kids_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:padding="15dp"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linear_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/et_email"
        android:layout_marginTop="10dp">
        <RadioButton
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:color="@color/app_color"
            android:buttonTint="@color/app_color"
            android:checked="false"
            />

        <TextView
            android:id="@+id/privacy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/privacy_link"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/linear_privacy"
        android:id="@+id/terms_layout">

        <RadioButton
            android:id="@+id/terms_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:color="@color/app_color"
            android:buttonTint="@color/app_color"
            android:checked="false"
            />

        <TextView
            android:id="@+id/terms_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/terms_link"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_custom"
        android:letterSpacing="0.1"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>