<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.Onboarding"
    android:padding="30dp">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_onboarding"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:scaleType="fitCenter"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/logo_splash" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_onboarding"
        android:layout_marginTop="-60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/title_onboarding_1"
        android:textColor="@color/md_black_1000"
        android:textSize="19sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_onboarding_title"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/description_onboarding_1"
        android:textColor="@color/md_black_1000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_onboarding_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_onboarding_description"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/description_onboarding_link1"
        android:textColor="@color/app_color"
        android:textSize="16sp" />



</RelativeLayout>
