<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reward_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="invisible"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/permission"
            android:textFontWeight="500"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:layout_below="@+id/header_layout"
        android:padding="@dimen/_15sdp"
        android:layout_margin="@dimen/_12sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/read_phone_state"
                android:textColor="@color/white"
                android:textFontWeight="500"
                android:textSize="@dimen/_14sdp" />

            <CheckBox
                android:id="@+id/read_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/permission_switch" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:lines="2"
                android:text="@string/permit_usage_access"
                android:textFontWeight="500"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp" />

            <CheckBox
                android:id="@+id/permit_usage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:button="@drawable/permission_switch" />
        </RelativeLayout>

        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="200dp"
            app:backgroundTint="@null"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            style="@style/txt_style"
            android:visibility="gone"
            android:background="@drawable/button_gradient"
            android:layout_height="40dp"
            android:text="@string/proceed"/>
    </LinearLayout>
</RelativeLayout>